UIMacros: {ifCurrent} and $request helper service [closes #2]

--- a/tests/LatteBundle/DependencyInjection/Resources/views/test/uiMacros.html.latte
+++ b/tests/LatteBundle/DependencyInjection/Resources/views/test/uiMacros.html.latte
@@ -1,3 +1,6 @@
 <a n:href="test">test</a>
 {link test}
 {plink test}
+{ifCurrent foo}test{/ifCurrent}bar
+<strong n:tag-ifCurrent="homepage">Homepage</strong>
+<strong n:tag-ifCurrent="test">Test</strong>
