FormMacros {form}, {form_start}, {form_end}, {form_rest}, {form_row}, {form_label}, {form_widget}. {form_errors}

--- a/src/LatteBundle/Resources/views/Bootstrap3/form_row.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/form_row.html.latte
@@ -1,5 +1,5 @@
 <div n:class="form-group, count($errors) ? has-error">
-    {!$latteForms->label($form)}
-    {!$latteForms->widget($form)}
-    {!$latteForms->errors($form)}
+    {form_label $form}
+    {form_widget $form}
+    {form_errors $form}
 </div>
