--- a/src/LatteBundle/Resources/views/Bootstrap3/form.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/form.html.latte
@@ -1,3 +1,3 @@
-{!$latteForms->start($form)}
-    {!$latteForms->widget($form)}
-{!$latteForms->end($form)}
+{form_start $form}
+    {form_widget $form}
+{form_end $form}
