--- a/src/LatteBundle/Resources/views/Bootstrap3/form_rest.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/form_rest.html.latte
@@ -1,5 +1,5 @@
 {foreach $form as $child}
     {if !$child->isRendered()}
-        {!$latteForms->row($child)}
+        {form_row $child}
     {/if}
 {/foreach}
