--- a/src/LatteBundle/Resources/views/Bootstrap3/form_widget_compound.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/form_widget_compound.html.latte
@@ -1,7 +1,7 @@
 <div n:attr="id => $id" {foreach $attr as $attrname => $attrvalue}{$attrname}="{$attrvalue}" {/foreach}>
     {if empty($form->parent)}
-        {!$latteForms->errors($form)}
+        {form_errors $form}
     {/if}
     {include form_rows.html.latte}
-    {!$latteForms->rest($form)}
+    {form_rest $form}
 </div>
