--- a/src/LatteBundle/Resources/views/Bootstrap3/form_widget_simple.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/form_widget_simple.html.latte
@@ -1,3 +1,3 @@
 {var type => isset($type) ? $type : text}
 <input type="{$type}" id="{$id}" name="{$full_name}"{if $read_only} readonly="readonly"{/if}{if $disabled} disabled="disabled"{/if}{if $required} required="required"{/if}{if $max_length} maxlength="{$max_length}"{/if}{if $pattern} pattern="{$pattern}"{/if}
-{foreach $attr as $attrname => $attrvalue}{$attrname}="{$attrvalue}" {/foreach} n:attr="value => $value" n:class="form-control" />
+{foreach $attr as $attrname => $attrvalue}{$attrname}={$attrvalue} {/foreach} n:attr="value => $value" n:class="form-control" />
