--- a/src/LatteBundle/Resources/views/Bootstrap3/button_widget.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/button_widget.html.latte
@@ -2,4 +2,4 @@
     {var label => $label|humanize}
 {/if}
 <button type="{isset($type) ? $type : button}" id="{$id}" name="{$full_name}"{if $disabled} disabled="disabled"{/if}
-    {foreach $attr as $attrname => $attrvalue}{$attrname}="{$attrvalue}" {/foreach} n:class="btn, btn-default">{$label}</button>
+    {foreach $attr as $attrname => $attrvalue}{$attrname}="{$attrvalue}" {/foreach} n:class="isset($attr['class']) ? $attr['class'] : 'btn btn-default'">{$label}</button>
