--- a/src/LatteBundle/Resources/views/Bootstrap3/form_start.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/form_start.html.latte
@@ -1,4 +1,4 @@
 {var method => $method|upper}
 {var form_method => in_array($method, ['GET', 'POST']) ? $method : 'POST'}
-<form method="{$form_method|lower}" action="{$action}" n:attr="$attr"{if $multipart} enctype="multipart/form-data"{/if}>
+<form method="{$form_method|lower}" action="{$action}" n:attr="(expand) $attr"{if $multipart} enctype="multipart/form-data"{/if} n:class="isset($attr['class']) ? $attr['class']">
     <input n:if="$form_method != $method" type="hidden" name="_method" value="{$method}" />
