--- a/tests/LatteBundle/Bridge.Nette.Latte.Macros/Resources/views/test/formMacros.html.latte
+++ b/tests/LatteBundle/Bridge.Nette.Latte.Macros/Resources/views/test/formMacros.html.latte
@@ -1,3 +1,7 @@
 {form_start $form1}
 {form_widget $form1['create']}
 {form_end $form1}
+
+{form_widget $form2['image']}
+
+{form_widget $form2['email']}
