--- a/tests/LatteBundle/Bridge.Nette.Latte.Macros/Resources/views/test/coreMacros.html.latte
+++ b/tests/LatteBundle/Bridge.Nette.Latte.Macros/Resources/views/test/coreMacros.html.latte
@@ -4,3 +4,4 @@ ifset: {ifset $name}OK{/ifset}
 for: {for $i = 0; $i < 3; $i++}{$i}{/for}
 ifcontent: <p n:ifcontent></p>OK
 <p n:ifcontent>{$name}</p>
+<p n:class="false ? 'foo--bar' : 'foo', true ? 'lorem--ipsum'"></p>
