--- a/src/LatteBundle/Resources/views/Bootstrap3/choice_widget_collapsed.html.latte
+++ b/src/LatteBundle/Resources/views/Bootstrap3/choice_widget_collapsed.html.latte
@@ -1,8 +1,10 @@
 {if $required and $empty_value === null and !$empty_value_in_choices and !$multiple}
     {var required => false}
 {/if}
+{var class => isset($attr['class']) ? $attr['class']}
+{? unset($attr['class'])}
 <select id="{$id}" name="{$full_name}"{if $read_only} readonly="readonly"{/if}{if $disabled} disabled="disabled"{/if}{if $required} required="required"{/if}{if $max_length} maxlength="{$max_length}"{/if}{if $pattern} pattern="{$pattern}"{/if}
-{foreach $attr as $attrname => $attrvalue}{$attrname}="{$attrvalue}" {/foreach}{if $multiple} multiple="multiple"{/if} class="form-control">
+{foreach $attr as $attrname => $attrvalue}{$attrname}="{$attrvalue}" {/foreach}{if $multiple} multiple="multiple"{/if} n:class="$class !== null ? $class : form-control">
     {if $empty_value !== null}
         <option value="" n:attr="selected => ($required and empty($value)) ? selected">{$empty_value}</option>
     {/if}
